--- a/content/post/2017-10-29-simple-quadratic-regression-example.Rmd
+++ b/content/post/2017-10-29-simple-quadratic-regression-example.Rmd
@@ -9,12 +9,58 @@ tags:
   - regression
 ---
 
-The purpose of this post is to give an example of how to visualize a quadratic linear regression and also how to find the value's of the predictor variable which give you the min and max fitted values of your outcome of interest.
+The purpose of this post is to give an example of how to visualize a quadratic linear regression and also how to find the values of the predictor variable which give you the min and max fitted values of your dependent variable. Given the curvilinear relationship between the independent and and dependent variable, it is not always obvious which values of the independent variable will produce the highest and lowest predicted values in the dependent variable. I will use the 'mtcars' data set that comes with your R installation.
 
-I was recently asked to look at relationships between server average query times and variables such as number of query counts, physical devices vs. AWS, disk utilization, number of nodes on a device, etc. The two main research questions were 1) what variables have significant associations with average query times and 2) what values of the predictor variables produce the mininmum average query times.
 
-I like many other data scientists, researchers, statisticians (whomever) like to start every project with simple methods. You can learn a lot from descriptive statistics. If you remember your intro stats course from college there is a chance that
-simple linear regression was taught in the descriptives section. An exmaple of using this method is below.
+```{r}
+head(mtcars)
+```
+
+
+```{r}
+library(ggplot2)
+## plot base + points
+plot.mgp.hp <- ggplot(mtcars, aes(x = hp, y = mpg)) + geom_point()
+print(plot.mgp.hp)
+
+```
+
+You can see in the intial graph above that there is a quadratic realtionship between the predictor hp and the outcome mpg. We can add the quadratic regression line into the plot itself. Using the poly method here is a time saver. It returns the main effect of the x variable along with the squared x variable.
+
+```{r}
+
+formula <- y ~ poly(x, 2, raw = TRUE)
+ggplot(mtcars, aes(x = hp, y = mpg)) +
+      geom_point() +
+      stat_smooth(method = "lm", formula = formula, size = 1)
+```
+
+Based on the curviture we can safely assume that the coefficient for hp is negative and coefficient for hp-squared is positive. Let's check and see the actual regression table.
+
+```{r}
+fit.mpg <- lm(mpg ~ poly(hp, 2), data = mtcars)
+summary(fit.mpg)
+```
+As suspected, the main effect of hp is negative (-26.046) with a postive squared term (13.155). Both have a significant effect on mpg. Using this information we can use the model to predict the outcome and get the values of hp which produe the minimum and maximum values of the predicted mpg.
+
+```{r}
+fitted.mpg <- fit.mpg$fitted.values
+
+fitted.mpg.df <- as.data.frame(cbind(mtcars$hp, fitted.mpg))
+
+min.index <- which.min(fitted.mpg.df$fitted.mpg)
+max.index <- which.max(fitted.mpg.df$fitted.mpg)
+min.mpg <- fitted.mpg.df[min.index,]
+max.mpg <- fitted.mpg.df[max.index,]
+
+print(min.mpg)
+print(max.mpg)
+
+```
+
+The maximum fitted mpg value was produced by the Honda civict with 52 horse power at 30.45 mpg while the Camaro Z28 with 245 horse power is a paltry 13.40 mpg.
+
+
 
 
 
